2012-06-02 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/pic14/main.c, src/pic16/main.c,
	  support/scripts/pic14fam-h-gen.pl,
	  applied modified patch
	  #3531337 - The pic14 port, automatically creates the -DpicXXX,
	  thanks to Molnar Karoly
	* support/scripts/pic16fam-h-gen.pl: modified for __SDCC_PICXXX
	* device/non-free/include/pic14/pic14fam.h,
	  device/non-free/include/pic16/pic16fam.h: (re)generated

2012-06-01 Borut Razem <borut.razem AT gmail.com>

	* doc/README.txt, doc/INSTALL.txt: updated for SDCC 3.2.0 release

2012-06-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Shift optimization.

2012-06-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Always use 16-bit addition when an operand and the result are in hl.

2012-06-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Preparations for further pointer offset
	  optimizations. Bug fixes for certain register assignment cases
	  in complement, unary minus, bitwise operators, and bitfield
	  unpacking.

2012-05-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix handling of a in casts, bug #3531118.

2012-05-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Updated manual (mostly r3ka and s08 port).

2012-05-31 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/cmd.c: fixed bug #3530998 - source code bug..

2012-05-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h: handle up to 8 registers per symbol for long long
	  support

2012-05-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc.h,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  More flexible handling of a during pointer access in z80-related ports.

2012-05-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-r2k.def:
	  Fix invalid stack-relative increment.
	* src/z80/gen.c: